Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectIntegerField.quorum
class Main
    Object o        
    action Main
        o = cast(Object, 5)
        output "passed"
    end
end