Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjIntegerField.quorum
class Main
    Number num
    action Main
        num = cast(Number, 5)
    end
end